--- a/config/gainestown.cfg
+++ b/config/gainestown.cfg
@@ -18,7 +18,7 @@ data_access_time = 30 # 35 cycles total according to membench, +L1+L2 tag times
 tags_access_time = 10
 perf_model_type = parallel
 writethrough = 0
-shared_cores = 4
+shared_cores = 1
 
 [perf_model/dram_directory]
 # total_entries = number of entries per directory controller.
@@ -29,7 +29,7 @@ directory_type = full_map
 [perf_model/dram]
 # -1 means that we have a number of distributed DRAM controllers (4 in this case)
 num_controllers = -1
-controllers_interleaving = 4
+controllers_interleaving = 1
 # DRAM access latency in nanoseconds. Should not include L1-LLC tag access time, directory access time (14 cycles = 5.2 ns),
 # or network time [(cache line size + 2*{overhead=40}) / network bandwidth = 18 ns]
 # Membench says 175 cycles @ 2.66 GHz = 66 ns total
@@ -41,8 +41,19 @@ dimms_per_controller = 4
 [network]
 memory_model_1 = bus
 memory_model_2 = bus
+# memory_model_1 = emesh_hop_by_hop
+# memory_model_2 = emesh_hop_by_hop
 
 [network/bus]
 bandwidth = 25.6 # in GB/s. Actually, it's 12.8 GB/s per direction and per connected chip pair
 ignore_local_traffic = true # Memory controllers are on-chip, so traffic from core0 to dram0 does not use the QPI links
 
+# [network/emesh_hop_by_hop]
+# hop_latency = 2            # Per-hop latency in core cycles
+# link_bandwidth = 64        # Per-link, per-direction bandwidth in bits/cycle
+# dimensions = 2             # Mesh dimensions (1 for line/ring, 2 for mesh/torus)
+# wrap_around = true         # Has wrap-around links? (false for line/mesh, true for ring/torus)
+# concentration = 1          # Number of cores per network interface (must be >= last-level-cache/shared_cores)
+
+# [network/bus]
+# enabled = false
