--- a/config/gainestown.cfg
+++ b/config/gainestown.cfg
@@ -6,6 +6,8 @@
 
 [perf_model/core]
 frequency = 2.66
+logical_cpus = 64
+type = interval
 
 [perf_model/l3_cache]
 perfect = false
@@ -35,8 +37,8 @@ controllers_interleaving = 1
 # Membench says 175 cycles @ 2.66 GHz = 66 ns total
 latency = 45
 per_controller_bandwidth = 7.6              # In GB/s, as measured by core_validation-dram
-chips_per_dimm = 8
-dimms_per_controller = 4
+chips_per_dimm = 1
+dimms_per_controller = 64
 
 [network]
 memory_model_1 = bus
