--- a/docker/Dockerfile-ubuntu-20.04
+++ b/docker/Dockerfile-ubuntu-20.04
@@ -62,4 +62,7 @@ RUN apt-get update && apt-get install -y \
     libxt-dev \
     libxmu-dev \
     libxi-dev \
+    libxapian-dev \
+    iputils-ping \
+    gnuplot \
  && rm -rf /var/lib/apt/lists/*
